--- a/src/App.css
+++ b/src/App.css
@@ -33,3 +33,9 @@ a:hover {
     width: 180px;
     
 }
+
+.indivCats {
+    width: 300px;
+    display: flex;
+    justify-content: space-between;
+}
