--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,9 @@ a:hover {
     display: flex;
     justify-content: space-between;
 }
+
+.AllCats {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(3 minmax(300px));
+}
