--- a/src/App.css
+++ b/src/App.css
@@ -93,4 +93,13 @@ a:hover {
     width:fit-content
 }
 
+.aboutPage {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin: 100px;
+    padding: 100px;
+}
+
 
